set(OFX_HOSTSUPPORT_HEADER_DIR "${CMAKE_CURRENT_SOURCE_DIR}/include")
set(OFX_HOSTSUPPORT_LIBRARY_DIR "${CMAKE_CURRENT_SOURCE_DIR}/src")

file(GLOB_RECURSE OFX_HOSTSUPPORT_HEADER_FILES "${OFX_HOSTSUPPORT_HEADER_DIR}/*.h")
file(GLOB_RECURSE OFX_HOSTSUPPORT_LIBRARY_FILES "${OFX_HOSTSUPPORT_LIBRARY_DIR}/*.cpp")

add_library(OfxHost STATIC
	${OFX_HEADER_FILES}
	${OFX_HOSTSUPPORT_HEADER_FILES}
	${OFX_HOSTSUPPORT_LIBRARY_FILES})

set_target_properties(OfxHost PROPERTIES LINKER_LANGUAGE CXX)
if(NOT MSVC)
	set_target_properties(OfxHost PROPERTIES COMPILE_FLAGS "-fPIC")
endif()

target_link_libraries(OfxHost PUBLIC expat::expat)

target_include_directories(OfxHost PRIVATE
	${OFX_HEADER_DIR}
	${OFX_HOSTSUPPORT_HEADER_DIR})

target_include_directories(OfxHost INTERFACE
    $<BUILD_INTERFACE:${OFX_HEADER_DIR}>
    $<BUILD_INTERFACE:${OFX_HOSTSUPPORT_HEADER_DIR}>
    $<INSTALL_INTERFACE:include>)

install(FILES
	${OFX_HEADER_FILES}
	${OFX_HOSTSUPPORT_HEADER_FILES}
	DESTINATION include)
